--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
                 aria-label="btn"
                 data-testid="test-about-btn"
                 class="about-btn"
+                target="_blank"
+                rel="noopener noreferrer"
                 >About Me</a
               >
               <a
@@ -120,6 +122,8 @@
                 aria-label="btn"
                 data-test="test-contact-btn"
                 class="contact-btn"
+                target="_blank"
+                rel="noopener noreferrer"
                 >Contact Me</a
               >
             </section>
